force-app/main/default/objects/VendorEvaluation__c/VendorEvaluation__c.object-meta.xml
<CustomObject>
    <label>Vendor Evaluation</label>
    <nameField>
        <displayFormat>Evaluation-{000}</displayFormat>
        <label>Vendor Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>