force-app/main/default/objects/VendorEvaluation__c/fields/Adherence_to_Distribution_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Adherence_to_Distribution_Agreement__c</fullName>
    <inlineHelpText>Is Vendor adhering to distribution agreement = Y/N</inlineHelpText>
    <label>Adherence to Distribution Agreement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>