force-app/main/default/objects/VendorEvaluation__c/fields/Adherence_to_Distribution_Agreement_S_w__c.field-meta.xml
<CustomField>
    <fullName>Adherence_to_Distribution_Agreement_S_w__c</fullName>
    <inlineHelpText>Spreadsheet follow format required by our IT and Items departments for uploading with merchandising and packaging information included(1-5)</inlineHelpText>
    <label>Adherence to Distribution Agreement S/w</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>