force-app/main/default/objects/VendorEvaluation__c/fields/Average_Score_Information__c.field-meta.xml
<CustomField>
    <fullName>Average_Score_Information__c</fullName>
    <formula>( Service_Department__c +  Manufacturing_Capabilities__c )/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>