force-app/main/default/objects/VendorEvaluation__c/fields/Average_Score_Marketing_R__c.field-meta.xml
<CustomField>
    <fullName>Average_Score_Marketing_R__c</fullName>
    <formula>(Marketing_Strategy_Compliance__c +  Rebates_and_incentive_compliance__c)/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>