force-app/main/default/objects/VendorEvaluation__c/fields/Average_Score_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Average_Score_Partnership__c</fullName>
    <formula>Adherence_to_Distribution_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>