force-app/main/default/objects/VendorEvaluation__c/fields/Average_Score_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>Average_Score_Purchasing__c</fullName>
    <formula>(On_Time_Delivery__c + Product_Availability__c + Supplier_Production_Time__c )/3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>