force-app/main/default/objects/VendorEvaluation__c/fields/Average_Score_TandC__c.field-meta.xml
<CustomField>
    <fullName>Average_Score_TandC__c</fullName>
    <formula>(Freight_Fees_including_fuel_surcharge__c + Packaging_and_Handling_Fees__c + Other_Fees__c )/3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>