force-app/main/default/objects/VendorEvaluation__c/fields/Average_Score_Vendor_S_W__c.field-meta.xml
<CustomField>
    <fullName>Average_Score_Vendor_S_W__c</fullName>
    <formula>( Adherence_to_Distribution_Agreement_S_w__c + Inventory_visibility__c + Price_lists__c )/3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>