force-app/main/default/objects/VendorEvaluation__c/fields/Company_Information__c.field-meta.xml
<CustomField>
    <fullName>Company_Information__c</fullName>
    <formula>Average_Score_Information__c *  Weight_Company_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Information</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>