force-app/main/default/objects/VendorEvaluation__c/fields/Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name__c</fullName>
    <label>Firm Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>