force-app/main/default/objects/VendorEvaluation__c/fields/Freight_Fees_including_fuel_surcharge__c.field-meta.xml
<CustomField>
    <fullName>Freight_Fees_including_fuel_surcharge__c</fullName>
    <inlineHelpText>Percent of sales to freight fees</inlineHelpText>
    <label>Freight Fees including fuel surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>