force-app/main/default/objects/VendorEvaluation__c/fields/Inventory_visibility__c.field-meta.xml
<CustomField>
    <fullName>Inventory_visibility__c</fullName>
    <inlineHelpText>Accuracy of inventory visible online</inlineHelpText>
    <label>Inventory visibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>