force-app/main/default/objects/VendorEvaluation__c/fields/Manufacturing_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Capabilities__c</fullName>
    <inlineHelpText>Vendor Manufactures Own Product (5)/Vendor Outsources 100% of Products (1) or a combination thereof (3)</inlineHelpText>
    <label>Manufacturing Capabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>