force-app/main/default/objects/VendorEvaluation__c/fields/Marketing_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Requirements__c</fullName>
    <formula>Average_Score_Marketing_R__c  *  Weight_Marketing_Requirements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Requirements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>