force-app/main/default/objects/VendorEvaluation__c/fields/Marketing_Strategy_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Strategy_Compliance__c</fullName>
    <inlineHelpText>Vendor in compliance with Marketing Strategy = Y/N</inlineHelpText>
    <label>Marketing Strategy Compliance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>