force-app/main/default/objects/VendorEvaluation__c/fields/On_Time_Delivery__c.field-meta.xml
<CustomField>
    <fullName>On_Time_Delivery__c</fullName>
    <inlineHelpText>Proposal details plan/commitment that 95% or better of orders will ship when promised  95% or better = 5 ; 85-94% = 4 ; 75-84% = 3 ; 65-74% =2 ; and anything lower = 1</inlineHelpText>
    <label>On Time Delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>