force-app/main/default/objects/VendorEvaluation__c/fields/Other_Fees__c.field-meta.xml
<CustomField>
    <fullName>Other_Fees__c</fullName>
    <inlineHelpText>Total fees as a percent to sales</inlineHelpText>
    <label>Other Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>