force-app/main/default/objects/VendorEvaluation__c/fields/Packaging_and_Handling_Fees__c.field-meta.xml
<CustomField>
    <fullName>Packaging_and_Handling_Fees__c</fullName>
    <inlineHelpText>Vendor Does Not charge additional Package or Handling Fees (5) ; Vendor charges additional Package or Handling fees but communicates changes timely (3) or Vendor Charges additional packaging and Handling Fees with limited communication (1)</inlineHelpText>
    <label>Packaging and Handling Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>