force-app/main/default/objects/VendorEvaluation__c/fields/Partnership_Understanding__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Understanding__c</fullName>
    <formula>Average_Score_Partnership__c  *  Weight_Partnership_Understanding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership Understanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>