force-app/main/default/objects/VendorEvaluation__c/fields/Preferred_vendor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Preferred vendor</label>
    <referenceTo>Preferred_vendor__c</referenceTo>
    <relationshipLabel>Vendor Evaluations</relationshipLabel>
    <relationshipName>Vendor_Evaluations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>