force-app/main/default/objects/VendorEvaluation__c/fields/Price_lists__c.field-meta.xml
<CustomField>
    <fullName>Price_lists__c</fullName>
    <inlineHelpText>Spreadsheet follows format required by our IT  and  Items departments for uploading with merchandising and packaging information included (1-5)</inlineHelpText>
    <label>Price lists are in Excel format</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>