force-app/main/default/objects/VendorEvaluation__c/fields/Purchasing_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Requirements__c</fullName>
    <formula>Average_Score_Purchasing__c * Weight_Purchasing_Requirement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchasing Requirements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>