force-app/main/default/objects/VendorEvaluation__c/fields/Rebates_and_incentive_compliance__c.field-meta.xml
<CustomField>
    <fullName>Rebates_and_incentive_compliance__c</fullName>
    <inlineHelpText>Vendor in compliance with Distribution Agreement = Y/N</inlineHelpText>
    <label>Rebates and incentive compliance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>