force-app/main/default/objects/VendorEvaluation__c/fields/Send_Email_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email to Customer</label>
    <type>Checkbox</type>
</CustomField>