force-app/main/default/objects/VendorEvaluation__c/fields/Service_Department__c.field-meta.xml
<CustomField>
    <fullName>Service_Department__c</fullName>
    <inlineHelpText>Issue Resolution is worked toward and communicated upon in intervals no more than 48 hours apart.</inlineHelpText>
    <label>Service Department</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>