force-app/main/default/objects/VendorEvaluation__c/fields/Supplier_Production_Time__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Production_Time__c</fullName>
    <inlineHelpText>Proposal details how stocked SKUs are produced in advance of order (5) versus time to produce products at time of order (1) or a combination (3).</inlineHelpText>
    <label>Supplier Production Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>