force-app/main/default/objects/VendorEvaluation__c/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <formula>Average_Score_TandC__c  *  Weight_term_and_conditions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms and Conditions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>