force-app/main/default/objects/VendorEvaluation__c/fields/Total_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Total_Vendor__c</fullName>
    <formula>Company_Information__c  +  Partnership_Understanding__c + Marketing_Requirements__c  +   Vendor_Software_Demonstration__c + Purchasing_Requirements__c+ Terms_and_Conditions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Vendor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>