force-app/main/default/objects/VendorEvaluation__c/fields/Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight__c</fullName>
    <formula>Weight_Company_Information__c + Weight_Purchasing_Requirement__c + Weight_Partnership_Understanding__c + Weight_Marketing_Requirements__c + Weight_term_and_conditions__c + Weight_vendor_sw_Demostration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>