force-app/main/default/objects/VendorEvaluation__c/fields/Vendor_Software_Demonstration__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Software_Demonstration__c</fullName>
    <formula>Average_Score_Vendor_S_W__c  *  Weight_vendor_sw_Demostration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Software Demonstration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>