force-app/main/default/objects/VendorEvaluation__c/fields/Weight_term_and_conditions__c.field-meta.xml
<CustomField>
    <fullName>Weight_term_and_conditions__c</fullName>
    <defaultValue>0.20</defaultValue>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>