force-app/main/default/objects/VendorEvaluation__c/fields/Weight_vendor_sw_Demostration__c.field-meta.xml
<CustomField>
    <fullName>Weight_vendor_sw_Demostration__c</fullName>
    <defaultValue>0.10</defaultValue>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>